--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,2 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}
+/*contains externally imported fonts*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Orbitron');
