--- a/src/app/buttons.component.html
+++ b/src/app/buttons.component.html
@@ -2,18 +2,10 @@
     
     <div class="col">
         <div class="row">
-            <div class="col">
-                <button>AC</button>
+            <div class="col"*ngFor="let val of topRowValues">
+                <button>{{val}}</button>
             </div>
-            <div class="col">
-                <button>CE</button>
-            </div>
-            <div class="col">
-                <button>/</button>
-            </div>
-            <div class="col">
-                <button>*</button>
-            </div>
+            
         </div>
         <div class="row">
             <div class="col">
@@ -58,7 +50,7 @@
                 </div>
                 <div class="row">
                     <div class="col-8">
-                        <button>0</button>
+                        <calcButton0 *ngFor="let val of topRowValues"></calcButton0>
                     </div>
                     <div class="col-4">
                         <button>.</button>
