--- a/src/app/buttons.component.html
+++ b/src/app/buttons.component.html
@@ -2,64 +2,7 @@
     
     <div class="col">
         <div class="row">
-            <div class="col"*ngFor="let val of topRowValues">
-                <button>{{val}}</button>
-            </div>
-            
-        </div>
-        <div class="row">
-            <div class="col">
-                <button>7</button>
-            </div>
-            <div class="col">
-                <button>8</button>
-            </div>
-            <div class="col">
-                <button>9</button>
-            </div>
-            <div class="col">
-                <button>-</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <button>4</button>
-            </div>
-            <div class="col">
-                <button>5</button>
-            </div>
-            <div class="col">
-                <button>6</button>
-            </div>
-            <div class="col">
-                <button>+</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-9">
-                <div class="row">
-                    <div class="col-4">
-                        <button>1</button>
-                    </div>
-                    <div class="col-4">
-                        <button>2</button>
-                    </div>
-                    <div class="col-4">
-                        <button>3</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-8">
-                        <calcButton0 *ngFor="let val of topRowValues"></calcButton0>
-                    </div>
-                    <div class="col-4">
-                        <button>.</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <button>=</button>
-            </div>
+            <ng-template topbuttonrow-host></ng-template>             
         </div>
     </div>
     
