Added second & third button rows

--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -4,6 +4,12 @@
         <div class="row">
             <ng-template topbuttonrow-host></ng-template>             
         </div>
+        <div class="row">
+            <ng-template secondbuttonrow-host></ng-template>
+        </div>
+        <div class="row">
+            <ng-template thirdbuttonrow-host></ng-template>
+        </div>
     </div>
     
 </div>
