--- a/src/app/screen/screen.component.css
+++ b/src/app/screen/screen.component.css
@@ -22,5 +22,6 @@
 
 .calculatorScreen__lower {
     font-family: Orbitron, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
+    height: 1.6rem;
 }
