--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 /*contains externally imported fonts*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Orbitron');
-@import url('../node_modules/bootstrap/dist/bootstrap.min.css');
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css');
