Fixed getting "undefined" if pressing '=' first
In previous releases. pressing "=" first on the calculator would give an
"undefined". By first, this means not pressing any numbers or anything, so the
working value store is basically empty.

Minor changes:
Fixed the sizes of the upper and lower screens so that when empty they don't
decompose to a line.

--- a/src/app/screen/screen.component.css
+++ b/src/app/screen/screen.component.css
@@ -1,11 +1,5 @@
 /* Utilising BEM for naming*/
 
-* {
-    border: 1px dashed black;
-} 
-
-
-
 .calculatorScreen {
     background-color: #707070;
     color: black;
@@ -18,10 +12,11 @@
 .calculatorScreen__upper {
     font-family: Orbitron, sans-serif;
     font-size: 24px;
+    height: 1.6em;
 }
 
 .calculatorScreen__lower {
     font-family: Orbitron, sans-serif;
     font-size: 14px;
-    height: 1.6rem;
+    height: 1.6em;
 }
