Added Tests to Screen Component

--- a/src/app/screen/screen.component.html
+++ b/src/app/screen/screen.component.html
@@ -1,14 +1,10 @@
 <div class="row calculatorScreen">
     <div class="col">
         <div class="row">
-            <div class="col calculatorScreen__upper text-right">
-                {{upperScreenValue}}
-            </div>
+            <div class="col calculatorScreen__upper text-right">{{upperScreenValue}}</div>
         </div>
         <div class="row">
-            <div class="col calculatorScreen__lower text-right">
-                {{lowerScreenValue}}
-            </div>
+            <div class="col calculatorScreen__lower text-right">{{lowerScreenValue}}</div>
         </div>
     </div>
 </div>
